# vcpkg_junk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  README.txt  vcpkg.json
01_boost_static/: .editorconfig  CMakeLists.txt  README.md  cmd_getargs.cpp  test_boost.cpp
02_cmake_toolchain/: CMakeLists.txt  README.txt
03_vcpkg_json/: .editorconfig  CMakeLists.txt  CMakeUserPresets.json  README.md  Triangulate.cxx  foo.txt  test_boost.cpp  vcpkg.json  voronoi_basic_tutorial.cpp
04_cgal_tbb/: CMakeLists.txt  README.txt  vcpkg.json
05_manifest_features/: CMakeLists.txt  test_boost.cpp  vcpkg.json
05_manifest_features/ports/gmp/: portfile.cmake
06_cgal_tbb_novcpkg/: CMakeLists.txt  README.txt
07_cmake_qt/: CMakeLists.txt  README.txt  main.cpp
08_assimp_junk/: .editorconfig  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  GM13206_test.cpp  README.md  TilesetJson.h  assimp_aux.h  cmd_aiscene_bounding_box.cpp  cmd_tinygltf_bounding_volume.cpp  cmd_tinygltf_example.cpp  meshtoolbox.h  test_assimp.cpp  test_boost.ipynb  vcpkg.json
08_assimp_junk/test_data/BoxTextured-glTF_jpg/: BoxTextured.gltf
08_assimp_junk/test_data/CesiumTilesF/GM20993_export_cropped_as_cesium3d_tile/: model.glb  model.json  model.prj
08_assimp_junk/test_data/CesiumTilesF/loss_of_precision_lake_ws/: index-debug.html  index.html  model.glb  model.json  model.prj
08_assimp_junk/test_data/CesiumTilesF/loss_of_precision_ws1/: model.glb  model.json  model.prj
08_assimp_junk/test_data/CesiumTilesF/loss_of_precision_ws2/: model.glb  model.json  model.prj
08_assimp_junk/test_data/GM13206_test.tb_1_tiles/: 000_run_python_web_server.bat  0composite0.b3dm  README.txt  index-debug.html  index.html  tileset.json
08_assimp_junk/test_data/HelloWorldToo/: HelloWorldToo.html
08_assimp_junk/test_data/bounding_boxes (gltf)/: model.glb
08_assimp_junk/test_data/tileset2/: bounding_boxes.glb  tileset2.json
09_vtk_tutorial/: Axis.cxx  CMakeLists.txt  CMakePresets.json  ConstrainedDelaunay2D.cxx  GLTFImporter.cxx  LinearCellsDemo.cxx  PolyLine1_from_boost.cxx  Polygon.cxx  Pyramid.cxx  README.md  Tutorial_Step1.cxx  Tutorial_Step2.cxx  Tutorial_Step3.cxx  Tutorial_Step4.cxx  Tutorial_Step5.cxx  Tutorial_Step6.cxx  boost_cli.h  test_boost.ipynb  test_vtk.cpp  vcpkg.json
10_proj/: CMakeLists.txt  CMakeUserPresets.json  README.md  lv95_globalmapper.h  lv95_good.h  lv95_original.h  test_boost.cpp  test_boost.ipynb  test_eigen.cpp  test_proj.cpp  vcpkg.json
11_vs/: .gitignore  11_vs.sln  CMakeLists.txt  README.md  vcpkg.json
11_vs/cmd_app1/: CMakeLists.txt  cmd_app1.vcxproj  cmd_app1.vcxproj.filters  main.cpp  vcpkg.json
11_vs/cmd_boost_rtree_primer/: CMakeLists.txt  README.md  boost_rtree_zond.h  cmd_boost_rtree_primer.cpp  cmd_boost_rtree_primer.vcxproj  cmd_boost_rtree_primer.vcxproj.filters  vcpkg.json
11_vs/cmd_boost_rtree_traversal/: CMakeLists.txt  cmd_boost_rtree_traversal.cpp  cmd_boost_rtree_traversal.vcxproj  cmd_boost_rtree_traversal.vcxproj.filters
11_vs/cmd_boost_rtree_view_example/: CMakeLists.txt  cmd_boost_rtree_view_example.cpp  cmd_boost_rtree_view_example.vcxproj  cmd_boost_rtree_view_example.vcxproj.filters
11_vs/cmd_cesium_3d_tiles_pointcloud/: .gitignore  CMakeLists.txt  cmd_cesium_3d_tiles_pointcloud.cpp  cmd_cesium_3d_tiles_pointcloud.vcxproj  cmd_cesium_3d_tiles_pointcloud.vcxproj.filters
11_vs/cmd_mem_allocate/: CMakeLists.txt  cmd_mem_allocate.c  cmd_mem_allocate.vcxproj  cmd_mem_allocate.vcxproj.filters
11_vs/cmd_octree_primer/: CMakeLists.txt  cmd_octree_primer.cpp  cmd_octree_primer.vcxproj  cmd_octree_primer.vcxproj.filters
11_vs/cmd_pcl_octree_primer/: CMakeLists.txt  cmd_pcl_octree_primer.cpp  cmd_pcl_octree_primer.vcxproj  cmd_pcl_octree_primer.vcxproj.filters  vcpkg.json
11_vs/cmd_rtree_primer/: CMakeLists.txt  activeCodePage.manifest  cmd_rtree_primer.cpp  cmd_rtree_primer.vcxproj  cmd_rtree_primer.vcxproj.filters
11_vs/cmd_simple_boost_rstar_example/: CMakeLists.txt  cmd_simple_boost_rstar_example.cpp  cmd_simple_boost_rstar_example.vcxproj  cmd_simple_boost_rstar_example.vcxproj.filters
boost_static/: CMakeLists.txt  README.txt  cmd_getargs.cpp
cmake_toolchain/: CMakeLists.txt
common/: CONSOLE.h  DebuggingConsole.h
